@@ -21,6 +21,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20995: Enhance default ciphers used by the ssl module to enable
+  better security an prioritize perfect forward secrecy.
+
 - Issue #20884: Don't assume that __file__ is defined on importlib.__init__.
 
 - Issue #20879: Delay the initialization of encoding and decoding tables for
